<resources>
    <string name="app_name">四季鲜</string>

    <string name="file_provider">com.lf.shoppingmall.apk_hahaliu_sijixian</string>

    <string name="media_type">application/json; charset=utf-8</string>
    <string name="digits_no_text">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz1234567890/</string>
    <string name="loading_no_more">加载数据失败，请重新检查网路后重新加载</string>

    <!--主界面-->
    <string name="home_hint">首页</string>
    <string name="all_order">全部菜品</string>
    <string name="common_order">常用清单</string>
    <string name="shopping_cat">购物车</string>
    <string name="mine_hint">我的</string>
    <string name="search_hint">搜索菜品名称</string>
    <string name="choose_type">请选择具体分类</string>
    <string name="my_order_in">我的专属进货单</string>
    <string name="start_buy">开始购买</string>
    <string name="my_redpacket">我的红包</string>
    <string name="my_order">我的订单</string>
    <string name="choose_var">选规格</string>
    <string name="close">收起</string>
    <string name="help_book">帮助手册</string>

    <!--完善信息-->
    <string name="choose_shop">选择店面</string>
    <string name="register_agin">请继续已完成注册</string>
    <string name="register_agin_msg">你的帐号尚未绑定任何门店，请点击“继续”在页面中完成注册和绑定</string>
    <string name="exit">退出登录</string>
    <string name="agin">继续</string>
    <string name="shop_name">门店名称</string>
    <string name="input_shop_name">请输入完整真实的名称</string>
    <string name="head">负责人</string>
    <string name="head_hint">店长姓名（请输入真实姓名）</string>
    <string name="address">门店地址</string>
    <string name="address_choose">点击选择门店地址</string>
    <string name="address_more">请输入更详细信息</string>
    <string name="invitation">邀请码</string>
    <string name="update">提交</string>
    <string name="help">帮助</string>
    <string name="invitation_hint">若无邀请人可不填</string>
    <string name="perfect_help">如果有任何问题，可点击右上侧查看“帮助手册”或者直接拨打客服电话400—135-135咨询</string>
    <string name="address_no_more">当前暂无此城市记录</string>

    <!--选择 地址-->
    <string name="search_addr_hint">查找小区/街道/商厦等</string>
    <string name="cancle">取消</string>
    <string name="submit">确认</string>
    <string name="location">当前定位</string>
    <string name="hot_city">热门城市</string>

    <!--帐号管理中心-->
    <string name="manager_center">帐号管理中心</string>

    <!--登录-->
    <string name="hint_user_name">帐号</string>
    <string name="hint_pwd">密码</string>
    <string name="input_use_pwd">您的登录密码</string>
    <string name="please_input_use_pwd">请输入您的登录密码</string>
    <string name="please_input_use_pwd_format">请输入1-30位的登录密码</string>
    <string name="hint_login">登录</string>
    <string name="login_logo_username">您的手机号码</string>
    <string name="please_login_logo_username">请输入您的手机号码</string>
    <string name="please_login_logo_username_format">请输入正确格式的手机号码</string>
    <string name="login_verifylogin">手机验证码登录</string>
    <string name="login_fogetpwd">不能登录?</string>
    <string name="phone_number">手机号</string>
    <string name="login_type_number">使用密码登录</string>
    <!--注册-->
    <string name="verification_code">验证码</string>
    <string name="hint_verification_code">您收到的验证码</string>
    <string name="please_input_verification_code">请输入您的验证码</string>
    <string name="please_input_verification_code_format">请输入正确的验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="hint_register">注册</string>
    <string name="hint_register_term1">点击注册即表明您同意</string>
    <string name="hint_register_term2">服务条款</string>
    <string name="get_voice_verificaton_code">收不到短信，尝试语音验证码</string>
    <string name="get_voice_hine">已通知客服，稍后将收到语音通知</string>
    <string name="costom_service">客服</string>
    <string name="get_verification_agin">重新获取</string>

    <string name="term">欢迎你与四季鲜商城（ 详见定义条款）共同签署本（四季鲜商城平台服务协议）（下称本协议）并使用四季鲜商城服务平台\n
当你按照注册页面提示填写信息 阅读本协议且完成全部注册程序后. 即表示你已充分阅读.理解并接受本协议的全部内容，并与四季鲜商城达成一致，成为四季鲜商城平台“用户”。阅读本协议的过程中，如果你不同意本协议或其中任何条款约定，你应立即停止注册程序。\n一、定义\n
四季鲜商城：四季鲜商城平台经营者的单称或合称，包含了资阳四季鲜商城平台有限公司及其旗下全子公司、控股子公司、参股子公司或其他关联公司，以及前述公司的分公司。四季鲜商城平台服务:四季鲜商城基于互联网 ，以包含四季鲜商城平台网站、客户端等在内的各种形态（包括未来技术发展出现的新的服务形态）向您提供的各项服务。四季鲜商城平台规则：包括在所有四季鲜商城平台规则频道内已经发布及后续发布的全部规则、实施细则、产品说明、公告等。
\n二协议范围\n
签约主体\n
本协议由于你与四季鲜商城平台经营者共同缔结，本协议对你与四季鲜商城平台经营者均具有合同效力。\n
补充协议：\n
由于互联网高速发展，你与四季鲜商城签署的本协议列明的条款并不能完整罗列并覆盖你与四季鲜商城所有权利与义务，现有的约定也不能保证完全符合未来发展的需求。因此，四季鲜商城平台退换货规则等均为本协议的补充协议，与本协议不可分割且具有同等法律效力。如你使用四季鲜商城平台服务，视为你同意上述补充协议。
\n三用户资格\n
你确认，在你开始注册程序使用四季鲜商城平台服务前，你应当具备中华人民共和国法律规定的与你行为相适应的民事行为能力。\n
账户说明\n
\n当你按照注册页面提示填写信息、阅读并同意本协议且完成全部注册程序后，你可获得四季鲜商城平台账户并成为四季鲜商城平台用户，你有权使用你设置或确认的四季商城会员，邮箱，手机号码（以下简称“账户名称”）以及设置的密码（账户名称及密码合称“账户”）登录四季鲜平台。
注册信息管理
\n真实合法
\n在使用四季鲜平台服务时，你应当按四季鲜平台页面的提示准确完整地提供你的信息（包括你的姓名及电子邮件地址、联系电话、联系地址等），以便四季鲜与你联系。你了解并同意，:
便四季鲜与您联系。您了解并同意，您有义务保持您提供信息的真实性及有效性。
\n3.3.2账户安全规范您的账户为您自行设置并由您保管，账户因您主
动泄露或遭受他人攻击、诈骗等行为导致的损失及后果，均由您自行承担。除四季鲜商城存在过错外，您应对您账户项下的所有行为结果（包括但不限于在线签署各类协议、发布信息、购买商品及服务、披露信息等）负责。
\n四、商品的购买
\n4.1当您在四季鲜平台购买商品时，请您务必仔细确认所购商品的品名、价格、数量、型号、规格、尺寸或服务的时间、内容、限制性要求等重要事项，并在下单时核实您的联系地址、电话、收货人等信息。如您填写的收货人非您本人，则该收货人的行为和意思表示产生的法律后果均由您承担。
:
\n4.2您的购买行为应当基于真实的消费需求，不得存在对商品实施恶意购买、恶意维权等扰乱四季鲜商城正常交易秩序的行为。基于维护四季鲜商城平台交易秩序及交易安全的需要，四季鲜商城发现上述情形时可主动执行关闭相关交易订单等
操作。
\n五、订单的取消
\n5.1您有权在下列情况下，取消订单：下单当日23：00前拨打客服电话取消订单。5.2四季鲜在下列情况下，可以与用户协商取消订单：\n①网站上显示的商品信息错误或缺货的；\n②用户订单信息明显错误。
\n六、商品信息
\n6.1四季鲜商城网站上的商品信息随时有可能发生变动，四季鲜商城将尽所有合理必要的努力，使网站内展示的商品参数、说明、价格、库存等商品:
\n7.2因如下情况造成订单延迟或无法配送、交货等，四季鲜商城不承担延迟配送、交货的责任：
\n①您提供的信息错误、地址不详细等原因导致的；
\n②货物送达后无人签收，导致无法配送或延迟配送的；
\n③约定特殊时间段内送货的；
\n④不可抗力因素导致的，例如：自然灾害、交通拥堵、突发战争等；\n7.3订单确认后，因用户原因订单地址错误临时修改收货地址的，司机不提供改址配送服务，需重新下单修改正确收货地址。
\n八、用户信息的保护
\n8.1您在四季鲜城网站进行注册、浏览、下单购物、参加活动等行为时，涉及您的真实姓名/名称、通信地址、联系电话、电子邮箱、订单详情等信息的，四季鲜商城有权从完成交易、提供配送、售后及客户服务、开展活动、完成良好的用户体验等多种角度予以收集，并将对其中涉及个人隐私信息予以保密。
\n8.2四季鲜商城保证不对外公开或向任何第三方提供您的个人信息，但是存在下列情形之一的除外：
\n①事先获得您的明确授权；
\n②系为履行您的订单或保护您的合法权利所必须；
\n③系为履行法律义务；
\n④本注册协议或其他条款另有约定。
\n九、用户的违约
\n9.1违约认定
\n①使用四季鲜商城平台服务时违反有关法律法规规定的；
\n②违反本协议或本协议补充协议约定的。为适应电子商务发展和满足海量用户对高效优质服务的需求，您理解并同意，四季鲜可在四季鲜商城平台规则中约定违约认定的程序和标准。如：四季鲜可依据您的用户数据与海量用户数据的关系来认定您是否构成违约；您有义务对您的数据异常现象进:据您的用户数据与海量用户数据的关系来认定您是否构成违约；您有义务对您的数据异常现象进行充分举证和合理解释，否则将被认定为违约。
\n十、争议解决
\n本协议的订立、执行和解释及争议的解决均应适用中华人民共和国的法律。如就本协议内容或其执行发生任何争议，则双方应首协商解决；协商不成的，任何一方均应向四川省资阳市人民法院提起诉讼。
\n十一、其他
\n11.1本协议构成双方对本协议之约定事项及其他有关事宜的完整协议，除本协议规定的之外，未赋予本协议各方其他权利。
\n11.2本协议中的任何条款无论因何种原因被视为完全或部分无效或不具有执行力，该条应视为可分的，不影响本协议的任何其余条款的有效性、约束力及可执行性。
</string>



    <string name="yaoshi_tuoguan">
退换货业务受理范围
\n1 . 生鲜类（蔬菜水果、鲜肉禽蛋、海鲜水产、冷藏或冻货、面点等）商品自客户签收订单24小时内，如是四季鲜商城原因或商品质量问题，我们将及时为您进行退货；
\n2 . 非生鲜类（米面粮油，调料干货，厨房用品等）自客户签收订单七天内，可享受“无理由退货”政策。
\n退货必备条件
\n1 . 问题货品，请确保商品包装无破损；商品、赠品（如购买时有赠品）、说明书、发票、均齐全；
\n2 . 如申请退货的商品为成套商品中的一个商品如礼盒、礼包，则需退此整套商品。
\n注意事项
\n1 . 为保障客户权益，请客户签收前与配送人员当面核对货品（含赠品）是否与订单一致，确认无误后再签收；
\n2 . 如申请退货的商品为成套商品中的一个商品如礼盒、礼包，则需退此整套商品；
\n3 . 生鲜类及非生鲜类货品均在规定时间内受理退换货要求，若超过相关时限，我们将不再受理；
\n4 . 图片及信息仅供参照，商品将以实物为准。因拍摄灯光及不同显示器色差等问题可能造成商品图片与实物有一定色差，不属质量问题；
\n5 . 代金券不可折现，不找零，若您在使用后发生整体退货，所使用代金券不予退还，只退还实际支付金额；
\n6 . 通常一张订单只能进行一次退换货操作，为了确保您的权益，请全部检验完毕后与我们联系。
\n若属于下列情形，本公司不承担退换货责任
\n1 . 如因客户个人原因或保管不当造成质量问题的商品，不予退换；
\n2 . 误用或不正确的储存、烹饪、使用等方法所造成的质量问题，或撕毁、涂改标贴、防伪标记的商品，不予退换货；
\n3 . 所有赠品不予退换；
\n4 . 对于货品数量不足、错货或无货的情况，司机可受理当场提出的退换货要求，即货物送达后，收货人员当场清点货品数量，如有疑义，当场即时提出，一旦签收，我们将不再受理此类退换货。
    </string>



    <string name="term_shouhou">
四季鲜将依据《中华人民共和国产品质量法》、《中华人民共和国消费者权益保护法》等法律法规，承诺对已销售的存在质量问题的商品办理售后服务。
\n一、退换货业务受理范围：
\n1.生鲜类（蔬菜水果、鲜肉禽蛋、海鲜水产、冷藏或冻货、面点等）商品自客户签收订单24小时内，如是四季鲜网原因或商品质量问题，我们将及时为您进行退货；
\n2.非生鲜类（米面粮油，调料干货，厨房用品等）自客户签收订单七天内，可享受“无理由退货”政策；
\n二、退货必备条件：
\n1.问题货品，请确保商品包装无破损；商品、赠品（如购买时有赠品）、说明书、发票、均齐全；
\n2.如申请退货的商品为成套商品中的一个商品如礼盒、礼包，则需退此整套商品；
\n三、注意事项：
\n1.为保障客户权益，请客户签收前与配送人员当面核对货品（含:赠品）是否与订单一致，确认无误后再签收；
\n2.如果您的订单交由他人签收，签收人享有与您等同的权利，我们将视为您本人签收；
\n3.生鲜类及非生鲜类货品均在规定时间内受理退换货要求，若超过相关时限，我们将不再受理；
\n4.图片及信息仅供参照，商品将以实物为准。因拍摄灯光及不同显示器色差等问题可能造成商品图片与实物有一定色差，不属质量问题；
\n5.代金券不可折现，不找零，若您在使用后发生整体退货，所使用代金券不予退还，只退还实际支付金额；
\n6.通常一张订单只能进行一次退换货操作，为了确保您的权益，请全部检验完毕后与我们联系；
\n四、若属于下列情形，本公司不承担退换货责任：
\n1.如因客户个人原因或保管不当造成质量问题的商品，不予退换；
\n2.误用或不正确的储存、烹饪、使用等方法所造成的质量问题，或撕毁、涂改标贴、防伪标记的商品，不予退换货；
\n3.所有赠品不予退换；
\n4.对于货品数量不足、错货或无货的情况，司机可受理当场提出的退换货要求，即货物送达后，收货人员当场清点货品数量，如有疑义，当场即时提出，一旦签收，我们将不再受理此类退
换货。
</string>

</resources>
