<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/view_title_bar_common" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_norme_10" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_item_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="@dimen/register_item_padding"
            android:text="@string/shop_name"
            android:textColor="@color/text_norm_6"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/et_shop_name"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/padding_norme_10"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/input_shop_name"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingRight="@dimen/padding_norme_15"
            android:text=""
            android:textColor="@color/text_drak_4"
            android:textColorHint="@color/text_hint"
            android:textSize="14.0sp" />
    </LinearLayout>

    <View style="@style/line_horizontal_style"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_item_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="@dimen/register_item_padding"
            android:text="@string/head"
            android:textColor="@color/text_norm_6"
            android:textSize="16.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="商"
            android:textSize="16.0sp"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/et_shop_head"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/padding_norme_10"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/head_hint"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingRight="@dimen/padding_norme_15"
            android:text=""
            android:textColor="@color/text_drak_4"
            android:textColorHint="@color/text_hint"
            android:textSize="14.0sp" />
    </LinearLayout>

    <View style="@style/line_horizontal_style"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_addr_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/register_item_padding"
            android:text="@string/address"
            android:textColor="@color/text_norm_6"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/tv_choose_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/register_item_padding"
            android:drawablePadding="@dimen/padding_norme_10"
            android:drawableRight="@drawable/bg_pressed_arrow_com"
            android:layout_toRightOf="@id/tv_addr_hint"
            android:hint="@string/address_choose"
            android:text=""
            android:textColor="@color/text_norm_6"
            android:textColorHint="@color/text_hint"
            android:textSize="14.0sp" />

        <View
            android:id="@+id/line"
            android:layout_below="@id/tv_choose_addr"
            android:layout_alignLeft="@id/tv_choose_addr"
            style="@style/line_horizontal_style"/>

        <EditText
            android:id="@+id/et_address_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_norme_10"
            android:layout_below="@id/line"
            android:layout_alignLeft="@id/line"
            android:background="@null"
            android:hint="@string/address_more"
            android:maxLines="1"
            android:paddingRight="@dimen/padding_norme_15"
            android:text=""
            android:textColor="@color/text_drak_4"
            android:textColorHint="@color/text_hint"
            android:textSize="14.0sp" />
    </RelativeLayout>

    <View style="@style/line_horizontal_style"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_norme_10"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_item_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="@dimen/register_item_padding"
            android:text="@string/invitation"
            android:textColor="@color/text_norm_6"
            android:textSize="16.0sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="商"
            android:textSize="16.0sp"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/et_invitation"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/padding_norme_10"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/invitation_hint"
            android:inputType="number"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingRight="@dimen/padding_norme_15"
            android:text=""
            android:textColor="@color/text_drak_4"
            android:textColorHint="@color/text_hint"
            android:textSize="14.0sp" />
    </LinearLayout>

    <View style="@style/line_horizontal_style"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_margin="10.0dip"
            android:background="@drawable/bg_green_corner5"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="18.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_term"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10.0dip"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/perfect_help"
            android:textColor="@color/text_norm_6" />
    </LinearLayout>
</LinearLayout>