<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/view_title_bar_common" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_norme_10" />

    <View style="@style/line_horizontal_style" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_item_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="@dimen/register_item_padding"
            android:text="@string/hint_user_name"
            android:textColor="@color/text_norm_6"
            android:textSize="16.0sp" />

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:background="@null"
                android:hint="@string/login_logo_username"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingRight="50.0dip"
                android:text=""
                android:textColor="@color/text_drak_4"
                android:textColorHint="@color/text_hint"
                android:textSize="14.0sp" />

            <ImageView
                android:id="@+id/iv_clear_latest_phone"
                android:layout_width="35.0dip"
                android:layout_height="35.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10.0dip"
                android:src="@mipmap/ic_pay_cross" />
        </RelativeLayout>


        <View
            android:id="@+id/view_line"
            style="@style/line_vertical_style"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_get_verificode"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="@dimen/register_item_padding"
            android:text="@string/get_verification_code"
            android:textColor="@color/text_green"
            android:textSize="16.0sp"
            android:visibility="gone"/>

    </LinearLayout>

    <View style="@style/line_horizontal_style" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_item_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="@dimen/register_item_padding"
            android:text="@string/hint_pwd"
            android:textColor="@color/text_norm_6"
            android:textSize="16.0sp" />

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:background="@null"
                android:digits="@string/digits_no_text"
                android:hint="@string/input_use_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingRight="50.0dip"
                android:text=""
                android:textColor="@color/text_drak_4"
                android:textColorHint="@color/text_hint"
                android:textSize="14.0sp" />

            <CheckBox
                android:id="@+id/box_ped_clear"
                android:layout_width="35.0dip"
                android:layout_height="35.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@null"
                android:drawableRight="@drawable/bg_check_pwd_status"
                android:padding="10.0dip" />
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/line_horizontal_style" />

    <TextView
        android:id="@+id/tv_get_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10.0dip"
        android:padding="@dimen/padding_norme_15"
        android:text="忘记密码"
        android:textColor="@color/text_green"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_margin="10.0dip"
            android:background="@drawable/gray_btn"
            android:text="@string/hint_login"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10.0dip"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/login_verifylogin"
            android:textColor="@color/text_green"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10.0dip"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/login_fogetpwd"
            android:textColor="@color/text_green"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>